src/Components/Level.module.css
.container {
	display: flex;
	flex-direction: column;
}

.images {
	margin-block: 2rem;
}
.images img {
	width: 100%;
	height: auto;
}

.header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-wrap: wrap;
	gap: 0.5rem;
}

.locked {
	margin-top: 2rem;
	text-align: center;
	font-size: 10em;
	flex-grow: 1;
	display: grid;
	grid-template-rows: 1fr auto 2fr;
	max-height: 60rem;
}
.locked_in {
	grid-row: 2;
}

